Folder CRUD, Asset move, Asset Duplicate prevention
